# DMD

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
data/: .gitignore
data/input/: era5.py
modules/: dmd_routines.py
notebooks/: Demo.ipynb  Demo_1.ipynb  Demo_2.ipynb
src/WeatherDMD/: __init__.py  data_pipeline.py  data_wrangle.py  dmd_routines.py  plot_jupyter.py
src/WeatherDMD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/data_pipeline/: test_data_pipeline.py
tests/data_pipeline/data/input/: era5_slice.nc
