[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "WeatherDMD"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "scipy",
    "pydmd", 
    "dill", 
    "notebook",
    "ipympl", 
    "ipywidgets",
    "ipykernel", 
    "jax", 
    "jaxlib",
    "xarray",
    "netCDF4",
]
